--- a/proposal/jensen-pres.tex
+++ b/proposal/jensen-pres.tex
@@ -1,6 +1,6 @@
-% Created 2023-03-01 Wed 12:02
+% Created 2023-03-01 Wed 16:44
 % Intended LaTeX compiler: pdflatex
-\documentclass[presentation]{beamer}
+\documentclass[aspectratio=1610]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
@@ -39,13 +39,13 @@
 \end{frame}
 
 \section{Introduction}
-\label{sec:org4c7fb57}
-\begin{frame}[label={sec:org1f648d0}]{Acknowledgments}
+\label{sec:org21904d6}
+\begin{frame}[label={sec:org763b1f2}]{Acknowledgments}
 I would like to thank the McJunkin Family Charitable Foundation for their generous grant that supports this work.
 \end{frame}
 \section{Motivation}
-\label{sec:orgfbc564b}
-\begin{frame}[label={sec:org5b84c64}]{The Problem}
+\label{sec:org3ff89b2}
+\begin{frame}[label={sec:orgaacb78e}]{The Problem}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -67,7 +67,7 @@ I would like to thank the McJunkin Family Charitable Foundation for their genero
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgc255a83}]{Our Proposition}
+\begin{frame}[label={sec:orga6f7526}]{Our Proposition}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 Orthopaedic surgeons and clinicians would readily adopt a practical and inexpensive technology that allows them to measure a patient's knee kinematics during activities of daily living.
@@ -79,7 +79,7 @@ Orthopaedic surgeons and clinicians would readily adopt a practical and inexpens
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgee10601}]{Constraints}
+\begin{frame}[label={sec:orgbafe68d}]{Constraints}
 \begin{columns}
 \begin{column}{0.45\columnwidth}
 \begin{itemize}
@@ -96,17 +96,17 @@ Orthopaedic surgeons and clinicians would readily adopt a practical and inexpens
 \end{columns}
 \end{frame}
 \section{Background}
-\label{sec:org7207dde}
-\begin{frame}[label={sec:org3d0c759}]{Projective Geometry}
+\label{sec:org57e10dd}
+\begin{frame}[label={sec:org212c7de}]{Projective Geometry}
 \end{frame}
-\begin{frame}[label={sec:org213edb3}]{Camera Intrinsics}
+\begin{frame}[label={sec:orgb3276cb}]{Camera Intrinsics}
 \end{frame}
-\begin{frame}[label={sec:org6819a4a}]{Model-Image Registration}
+\begin{frame}[label={sec:orgeca56a8}]{Model-Image Registration}
 \end{frame}
 
 \section{Historical Methods}
-\label{sec:orgdd64865}
-\begin{frame}[label={sec:org7c5a29c}]{Overview}
+\label{sec:org3e711b6}
+\begin{frame}[label={sec:orgff96ded}]{Overview}
 Many different approaches have attempted to solve the model-image registration problem.
 \begin{itemize}
 \item Pre-computed projections
@@ -115,7 +115,7 @@ Many different approaches have attempted to solve the model-image registration p
 \item Iterative Projections
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgee6dc83}]{Pre-Computed Projections}
+\begin{frame}[label={sec:org048b667}]{Pre-Computed Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -134,7 +134,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org654d50a}]{Limitations of Pre-Computed Projections}
+\begin{frame}[label={sec:org4647bb5}]{Limitations of Pre-Computed Projections}
 \begin{itemize}
 \item Requires an accurate contour from the input image in order to perform calculations.
 \begin{itemize}
@@ -143,7 +143,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org92a73cc}]{Motion Capture (MoCap)}
+\begin{frame}[label={sec:org4435323}]{Motion Capture (MoCap)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -163,7 +163,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orga1ae908}]{Limitations of Motion Capture}
+\begin{frame}[label={sec:orgb828fda}]{Limitations of Motion Capture}
 Skin Mounted
 \begin{itemize}
 \item Doesn't accurately describe underlying skeletal motion with clinical accuracy \autocites{gaoInvestigationSoftTissue2008}[][]{kuoInfluenceSoftTissue2011}[][]{linEffectsSoftTissue2016}.
@@ -174,7 +174,7 @@ Bone Pins
 \item Need I say more?
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org842c9d4}]{Biplane Imaging}
+\begin{frame}[label={sec:orge785da0}]{Biplane Imaging}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -195,14 +195,14 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgd18898a}]{Limitations of Biplane Imaging}
+\begin{frame}[label={sec:org41288a5}]{Limitations of Biplane Imaging}
 \begin{itemize}
 \item Not many hospitals have biplane fluoroscopy setups.
 \item Clinically impractical
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7866f20}]{Iterative Projections}
+\begin{frame}[label={sec:orgd0b24b4}]{Iterative Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -221,7 +221,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org63d2973}]{Limitations of (historic) Iterative Projection Methods}
+\begin{frame}[label={sec:org09e882e}]{Limitations of (historic) Iterative Projection Methods}
 \begin{itemize}
 \item Requires human supervision for:
 \begin{itemize}
@@ -233,7 +233,7 @@ Bone Pins
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org99a9022}]{Model-based Roentgen Stereophotogrammetry (MBRSA)}
+\begin{frame}[label={sec:org54d0fe3}]{Model-based Roentgen Stereophotogrammetry (MBRSA)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -249,9 +249,8 @@ Bone Pins
 \end{frame}
 
 \section{Aims}
-\label{sec:org1d9eadb}
-
-\begin{frame}[label={sec:org1762f34}]{Aims}
+\label{sec:org0f5809c}
+\begin{frame}[label={sec:orgc066ea7}]{Aims}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{block}{Aims 1/2}
@@ -270,21 +269,10 @@ Joint Track Auto Toolkit
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org702a9aa}]{Aims}
-\begin{center}
-\begin{tabular}{ll}
-Aim(s) & Goal\\\empty
-\hline
-1/2 & Joint Track Machine Learning and Overcoming Single-Plane Limitations\\\empty
-3/4 & Pilot Trials and Standardized Kinematics Exam\\\empty
-5 & Joint Track Auto Toolkit: An Open Source Toolkit for Model-Image Registration\\\empty
-\end{tabular}
-\end{center}
-\end{frame}
 
 \section{References}
-\label{sec:org59b0bed}
-\begin{frame}[label={sec:orga0e9a52},fragile, allowframebreaks, label=]{References}
+\label{sec:org804d59a}
+\begin{frame}[label={sec:org132d6de},fragile, allowframebreaks, label=]{References}
 \AtNextBibliography{\tiny}
 \printbibliography
 \end{frame}
